--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"body-parser": "^1.20.3",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.21.0"
+		"express": "^4.21.0",
+		"pg": "^8.13.0",
+		"uuid": "^10.0.0"
 	}
 }
