--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
+		"firebase-admin": "^12.6.0",
 		"pg": "^8.13.0",
 		"uuid": "^10.0.0"
 	}
