--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "e-commerce-server",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "server.js",
 	"scripts": {
-		"start": "node index.cjs",
+		"start": "node server.cjs",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -17,6 +17,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"firebase": "^10.14.0",
+		"multer": "^1.4.5-lts.1",
 		"pg": "^8.13.0",
 		"uuid": "^10.0.0"
 	}
